# TextDrop

./: .gitignore  AGENTS.md  README.md  pyproject.toml  产品需求.md  开发日志.md
scripts/: build.ps1  run.ps1
src/textdrop/: __init__.py  __main__.py  app.py  config.py  constants.py  gui.py  i18n.py  mobile_page.py  network.py  paste.py  qr.py  server.py  tls.py  tokens.py
